Don't wrap content in pastes, use horizontal scrolling instead. Fixes broken line-numbering

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -15,6 +15,8 @@ pre code,
 pre .line-number {
   font-family: "Droid Sans Mono", Monospace;
   display: block;
+  white-space: pre;
+  overflow: auto;
 }
 
 pre .line-number {
